Fix site description line height on mobile

--- a/assets/stylesheets/victor.css
+++ b/assets/stylesheets/victor.css
@@ -322,6 +322,7 @@ figcaption {
 
     .site-title {
         width: 70vw;
+        line-height: 3rem;
     }
 
     .nav-menu.active {
